# pm-wang-requirements

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  database.py  deps.py  main.py
app/models/: __init__.py  insight.py  job.py  opportunity.py  pain.py  project.py  requirement.py  scenario.py  user_profile.py
app/routers/: ai_assist.py  projects.py  section_insight.py  section_job.py  section_opportunity.py  section_pain.py  section_requirement.py  section_research.py  section_scene.py  section_who.py
app/services/: export.py  validation.py
app/static/css/: style.css
app/templates/: base.html  index.html
app/templates/project/: create.html  dashboard.html
app/templates/sections/: _ai_dialog.html  insight.html  job.html  opportunity.html  pain.html  requirement.html  research.html  scene.html  who.html
templates/: 00-research.md  01-who.md  02-scene.md  03-job.md  04-pain.md  05-insight.md  06-opportunity.md  07-requirement.md
